@@ -2,6 +2,7 @@
 # some news ... see also TODO for hints
 #
 
+2021-05-04 -> send data/nibble (debugging mode)
 
 2021-05-03 -> send data (debugging mode)
 
